client/app/view-grid/_view-grid.theme.scss
@use 'sass:map';
@mixin view-grid($theme) {
    $primary: map.get($theme, primary);
    $accent: map.get($theme, accent);
    $warn: map.get($theme, warn);
    $bg: map.get($theme, background);
    $fg: map.get($theme, foreground);

    natural-gallery {
        .natural-gallery-js {
            .button {
                border-top: 1px solid #4c4747 !important;
                background-color: rgba(0, 0, 0, 0.5) !important;
                color: white;
            }

            .button:hover {
                border-top: 1px solid #4c4747 !important;
                background-color: rgba(0, 0, 0, 1) !important;
                color: white;
            }
        }
    }
}

